2006-03-04  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Oops, apparently 0.25.1 is taken.  Call this 0.25.2, and
	add a note about why it isn't 0.25.1.
	* UPGRADE: Similarly correct version number.
	
2006-03-04  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Draft NEWS for 0.25.1 security release.

2006-03-04  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (in_bookkeeping_dir): Count mt, Mt, mT as marking
	bookkeeping paths.
	* testsuite.at, tests/t_security_fix.at: Add test for it.

2005-12-29  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Write up for 0.25.

2005-12-29  Matthew Gregan  <kinetik@orcon.net.nz>

	* sqlite/{pager.c,sqlite3.h}: Upgrade to SQLite 3.2.8.

2005-12-29  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Notes on what to write up for 0.25.
	* win32/monotone.iss, monotone.spec, debian/changelog:
	* configure.ac, UPGRADE: Bump.

2005-12-26  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc (CMD(revert)): revert with no args prints usage,
	mention "." for entire working copy.

2005-12-21  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc (dump_difs, CMD(log)): only print --diffs for the file
	of interest.

2005-12-21  Matthew Gregan  <kinetik@orcon.net.nz>

	* botan/es_capi.{cpp,h}: Windows compile fixes for Botan 1.4.10.

2005-12-21  Matt Johnston  <matt@ucc.asn.au>

	* upgrade to Botan 1.4.10

2005-12-18  graydon hoare  <graydon@pobox.com>

	* AUTHORS: Add Roland.

2005-12-17  Roland McGrath  <roland@redhat.com>

	* work.hh (struct file_itemizer): Remove extraneous qualifier on
	visit_file declaration.
	* app_state.hh (class app_state): Remove extraneous qualifier on
	set_restriction declaration.

2005-12-14  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/fs.cc: Handle the fact that the MoveFileEx symbol might
	exist in kernel32.dll even though it doesn't actually work.  It
	turns out that Win9x implements a bunch of NT-only symbols as
	stubs that return ERROR_CALL_NOT_IMPLEMENTED, so it's not